spacing in the checklist view (fix)

--- a/templates/g5_helium/custom/scss/global.scss
+++ b/templates/g5_helium/custom/scss/global.scss
@@ -751,6 +751,7 @@ footer#g-footer > .g-container {
       justify-content: center;
       align-items: center;
       border-radius: 8px;
+      margin: 0;
 
 
       span {
